# IPV-Explain-Agent

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
docs/: contracts.md
src/agents/: attribution_agent.py  market_data_agent.py  narrative_agent.py  orchestrator.py  pricing_agent.py  report_agent.py  state.py
src/api/: main.py  schemas.py
src/attribution/: __init__.py  backtesting.py  schemas.py  stress_tests.py  taylor_decomp.py
src/market_data/: db.py  moex_client.py  vol_surface.py
src/models/: black_scholes.py  bond_pricing.py  swap_pricing.py
src/rag/: indexer.py  retriever.py
tests/: test_agents.py  test_attribution.py  test_integration.py
