[project]
name = "ipv-explain-agent"
version = "0.1.0"
description = "IPV Explain Agent orchestration and market data pipeline."
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7",
    "numpy>=1.26",
    "pydantic>=2.0",
    "psycopg[binary]>=3.2",
    "scipy>=1.11",
    "sentence-transformers>=3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
